tests/base/invalid/Function_Invalid_5.whiley
import * from whiley.lang.*

int ::m():
    return 20
 
int f():
    return m() 